--- a/workspace/MJCompiler/.gitignore
+++ b/workspace/MJCompiler/.gitignore
@@ -2,4 +2,9 @@ bin/
 logs/
 .classpath
 .project
+src/rs/ac/bg/etf/pp1/Yylex.java
 src/rs/ac/bg/etf/pp1/Yylex.java~
+src/rs/ac/bg/etf/pp1/MJParser.java
+src/rs/ac/bg/etf/pp1/sym.java
+src/rs/ac/bg/etf/pp1/ast
+spec/mjparser_astbuild.cup
