--- a/workspace/MJCompiler/build.xml
+++ b/workspace/MJCompiler/build.xml
@@ -77,7 +77,7 @@
 		<java classname="rs.etf.pp1.mj.runtime.Run">
 			<arg value="test/program.obj"/>
 			<arg value="-debug"/>
-			<redirector input="input.txt"/>
+			<redirector input="test/input.txt"/>
 			<classpath>
 				<pathelement location="lib/mj-runtime-1.1.jar"/>
 			</classpath>
@@ -87,7 +87,7 @@
 	<target name="runObj" depends="debugObj" >
 		<java classname="rs.etf.pp1.mj.runtime.Run">
 			<arg value="test/program.obj"/>
-            <redirector input="input.txt"/>
+            <redirector input="test/input.txt"/>
 			<!-- <redirector input="input.txt" output="output.txt"/> -->
 			<classpath>
 				<pathelement location="lib/mj-runtime-1.1.jar"/>
